--- a/index.html
+++ b/index.html
@@ -165,13 +165,61 @@
                         <th>Check-Out</th>
                         <th>Diárias</th>
                         <th>Valor Total</th>
+                        <th>Observações Adcionais</th>
                      </tr>
                      <tr>
                         <td><input type="text" /></td>
                         <td><input type="date" name="" id="" /></td>
                         <td><input type="date" name="" id="" /></td>
                         <td><input type="number" name="" id="" /></td>
+                        <td>
+                           <input
+                              type="currency"
+                              name="handleMoney"
+                              id="getMoney"
+                           />
+                        </td>
+                        <td><input type="text" name="" id="" /></td>
+                     </tr>
+                  </table>
+               </fieldset>
+               <fieldset>
+                  <legend>Custo Diversos</legend>
+                  <table id="custos">
+                     <tr>
+                        <th>Descrição</th>
+                        <th>Quantidade</th>
+                        <th>Valor Unitário</th>
+                        <th>Valor Total</th>
+                        <th>Observações Adcionais</th>
+                     </tr>
+                     <tr>
+                        <td><input type="text" /></td>
+                        <td><input type="text" /></td>
                         <td><input type="number" name="" id="" /></td>
+                        <td><input type="number" name="" id="" /></td>
+                        <td><input type="text" name="" id="" /></td>
+                     </tr>
+                     <tr>
+                        <td><input type="text" /></td>
+                        <td><input type="text" /></td>
+                        <td><input type="number" name="" id="" /></td>
+                        <td><input type="number" name="" id="" /></td>
+                        <td><input type="text" name="" id="" /></td>
+                     </tr>
+                     <tr>
+                        <td><input type="text" /></td>
+                        <td><input type="text" /></td>
+                        <td><input type="number" name="" id="" /></td>
+                        <td><input type="number" name="" id="" /></td>
+                        <td><input type="text" name="" id="" /></td>
+                     </tr>
+                     <tr>
+                        <td><input type="text" /></td>
+                        <td><input type="text" /></td>
+                        <td><input type="number" name="" id="" /></td>
+                        <td><input type="number" name="" id="" /></td>
+                        <td><input type="text" name="" id="" /></td>
                      </tr>
                   </table>
                </fieldset>
