--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>COTAQUIONS - Sistema de Cotação</title>
+		<title>COTAQUIONS - Cotação</title>
 		<link rel="stylesheet" href="style.css" />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -122,8 +122,8 @@
 						<div class="vazio">
 							<table id="vazio">
 								<tr>
-									<th class="sizetext">Detalhes do Percurso</th>
-									<th>Km vazio</th>
+									<th class="sizetext">Detalhes do Percurso VAZIO</th>
+									<th>Km</th>
 									<th>Total Vazio R$</th>
 								</tr>
 								<tr>
@@ -144,8 +144,8 @@
 						<div class="cheio">
 							<table id="cheio">
 								<tr>
-									<th class="sizetext">Detalhes do Percurso</th>
-									<th>Km Cheio</th>
+									<th class="sizetext">Detalhes do Percurso CHEIO</th>
+									<th>Km</th>
 									<th>Total Cheio R$</th>
 								</tr>
 								<tr>
