Update full calendar

--- a/calendario.html
+++ b/calendario.html
@@ -5,11 +5,33 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>COTAQUIONS - Calendario</title>
+		<link rel="stylesheet" href="./src/global.css" />
+		<link rel="stylesheet" href="./src/style.css" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Poppins:wght@400;500;700&display=swap"
+			rel="stylesheet"
+		/>
 		<link href="./node_modules/fullcalendar/main.css" rel="stylesheet" />
 		<script src="./node_modules/fullcalendar/main.js"></script>
-		<script src="calendar.js"></script>
+		<script src="./js/calendar.js
+		"></script>
 	</head>
 	<body>
-		<div id="calendar"></div>
+		<div class="topo">
+			<h1 class="title">APP COTAQUIONS</h1>
+			<nav class="menu">
+				<ul>
+					<a href="./index.html">Cotação</a>
+				</ul>
+				<ul>
+					<a href="./calendario.html">Calendario</a>
+				</ul>
+			</nav>
+		</div>
+		<div class="container">
+			<div class="calendar" id="calendar"></div>
+		</div>
 	</body>
 </html>
