--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>COTAQUIONS - Cotação</title>
-		<link rel="stylesheet" href="style.css" />
+		<link rel="stylesheet" href="./src/global.css" />
+		<link rel="stylesheet" href="./src/style.css" />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
@@ -16,6 +17,14 @@
 	<body>
 		<div class="topo">
 			<h1 class="title">APP COTAQUIONS</h1>
+			<nav class="menu">
+				<ul>
+					<a href="./index.html">Cotação</a>
+				</ul>
+				<ul>
+					<a href="./calendario.html">Calendario</a>
+				</ul>
+			</nav>
 		</div>
 		<div class="newtrip">
 			<form action="">
@@ -249,6 +258,6 @@
 				</div>
 			</form>
 		</div>
-		<script src="main.js"></script>
+		<script src="./js/main.js"></script>
 	</body>
 </html>
