--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 						<div class="vazio">
 							<table id="vazio">
 								<tr>
-									<th class="sizetext">Detalhes do Percurso VAZIO</th>
+									<th class="size50">Descrição do Percurso VAZIO</th>
 									<th>Km</th>
 									<th>Total Vazio R$</th>
 								</tr>
@@ -153,7 +153,7 @@
 						<div class="cheio">
 							<table id="cheio">
 								<tr>
-									<th class="sizetext">Detalhes do Percurso CHEIO</th>
+									<th class="size50">Descrição do Percurso CHEIO</th>
 									<th>Km</th>
 									<th>Total Cheio R$</th>
 								</tr>
@@ -169,6 +169,7 @@
 									<td>
 										<input
 											type="number"
+											class="sizetext"
 											name="kmcheio"
 											id="kmcheio"
 											onchange="AlterarValorKm()"
@@ -191,7 +192,7 @@
 								<th>Observações</th>
 							</tr>
 							<tr>
-								<td><input type="text" /></td>
+								<td><input type="text" class="sizetext" /></td>
 								<td><input type="date" name="" id="" /></td>
 								<td><input type="date" name="" id="" /></td>
 								<td><input type="number" name="" id="" /></td>
@@ -201,6 +202,7 @@
 										name="handleMoney"
 										id="getMoney"
 										placeholder="R$ 0,00"
+										onchange="resumoHosp()"
 									/>
 								</td>
 								<td><input type="text" name="" id="" /></td>
@@ -218,16 +220,7 @@
 								<th>Observações</th>
 							</tr>
 							<tr>
-								<td><input type="text" /></td>
-								<td><input type="text" /></td>
-								<td><input type="number" name="" id="" /></td>
-								<td>
-									<input type="number" name="" id="" placeholder="R$ 0,00" />
-								</td>
-								<td><input type="text" name="" id="" /></td>
-							</tr>
-							<tr>
-								<td><input type="text" /></td>
+								<td><input type="text" class="sizetext" /></td>
 								<td><input type="text" /></td>
 								<td><input type="number" name="" id="" /></td>
 								<td>
@@ -236,7 +229,7 @@
 								<td><input type="text" name="" id="" /></td>
 							</tr>
 							<tr>
-								<td><input type="text" /></td>
+								<td><input type="text" class="sizetext" /></td>
 								<td><input type="text" /></td>
 								<td><input type="number" name="" id="" /></td>
 								<td>
@@ -245,7 +238,16 @@
 								<td><input type="text" name="" id="" /></td>
 							</tr>
 							<tr>
+								<td><input type="text" class="sizetext" /></td>
 								<td><input type="text" /></td>
+								<td><input type="number" name="" id="" /></td>
+								<td>
+									<input type="number" name="" id="" placeholder="R$ 0,00" />
+								</td>
+								<td><input type="text" name="" id="" /></td>
+							</tr>
+							<tr>
+								<td><input type="text" class="sizetext" /></td>
 								<td><input type="text" /></td>
 								<td><input type="number" name="" id="" /></td>
 								<td>
@@ -254,6 +256,54 @@
 								<td><input type="text" name="" id="" /></td>
 							</tr>
 						</table>
+					</fieldset>
+					<fieldset>
+						<legend>Investimento</legend>
+						<div class="container">
+							<table>
+								<thead>
+									<tr>
+										<th colspan="3">Resumo das Despesas</th>
+									</tr>
+								</thead>
+								<tr>
+									<td colspan="2" class="investimento">
+										Quilometros Rodados (Cheio + Vazio)
+									</td>
+									<td id="resumoKmTotal">R$ 0,00</td>
+								</tr>
+								<tr>
+									<td colspan="2" class="investimento">Hospedagem</td>
+									<td id="hospedagemVlr">R$ 0,00</td>
+								</tr>
+								<tr>
+									<td colspan="2" class="investimento">Custos Diversos</td>
+									<td>R$ 0,00</td>
+								</tr>
+								<tr>
+									<td class="investimento">Margem de negociação</td>
+									<td style="width: 20%">
+										<input
+											class="sizetext"
+											type="number"
+											name=""
+											id=""
+											placeholder="Informe %"
+										/>
+									</td>
+									<td>R$ 0,00</td>
+								</tr>
+								<tr>
+									<td
+										colspan="2"
+										style="background-color: var(--color-theme); color: white"
+									>
+										Sugestão de cobrança.
+									</td>
+									<td>R$ 0,00</td>
+								</tr>
+							</table>
+						</div>
 					</fieldset>
 				</div>
 			</form>
