--- a/index.html
+++ b/index.html
@@ -214,46 +214,55 @@
 						<table id="custos">
 							<tr>
 								<th>Descrição</th>
-								<th>Quantidade</th>
-								<th>Valor Unitário</th>
-								<th>Valor Total</th>
-								<th>Observações</th>
+								<th>Valor</th>
 							</tr>
 							<tr>
 								<td><input type="text" class="sizetext" /></td>
-								<td><input type="text" /></td>
-								<td><input type="number" name="" id="" /></td>
 								<td>
-									<input type="number" name="" id="" placeholder="R$ 0,00" />
+									<input
+										class="sizetext"
+										type="number"
+										name=""
+										id=""
+										placeholder="R$ 0,00"
+									/>
 								</td>
-								<td><input type="text" name="" id="" /></td>
 							</tr>
 							<tr>
 								<td><input type="text" class="sizetext" /></td>
-								<td><input type="text" /></td>
-								<td><input type="number" name="" id="" /></td>
 								<td>
-									<input type="number" name="" id="" placeholder="R$ 0,00" />
+									<input
+										class="sizetext"
+										type="number"
+										name=""
+										id=""
+										placeholder="R$ 0,00"
+									/>
 								</td>
-								<td><input type="text" name="" id="" /></td>
 							</tr>
 							<tr>
 								<td><input type="text" class="sizetext" /></td>
-								<td><input type="text" /></td>
-								<td><input type="number" name="" id="" /></td>
 								<td>
-									<input type="number" name="" id="" placeholder="R$ 0,00" />
+									<input
+										class="sizetext"
+										type="number"
+										name=""
+										id=""
+										placeholder="R$ 0,00"
+									/>
 								</td>
-								<td><input type="text" name="" id="" /></td>
 							</tr>
 							<tr>
 								<td><input type="text" class="sizetext" /></td>
-								<td><input type="text" /></td>
-								<td><input type="number" name="" id="" /></td>
 								<td>
-									<input type="number" name="" id="" placeholder="R$ 0,00" />
+									<input
+										class="sizetext"
+										type="number"
+										name=""
+										id=""
+										placeholder="R$ 0,00"
+									/>
 								</td>
-								<td><input type="text" name="" id="" /></td>
 							</tr>
 						</table>
 					</fieldset>
