--- a/index.html
+++ b/index.html
@@ -223,8 +223,9 @@
 										class="sizetext"
 										type="number"
 										name=""
-										id=""
+										id="custo1"
 										placeholder="R$ 0,00"
+										onChange="resumocusto()"
 									/>
 								</td>
 							</tr>
@@ -235,8 +236,9 @@
 										class="sizetext"
 										type="number"
 										name=""
-										id=""
+										id="custo2"
 										placeholder="R$ 0,00"
+										onChange="resumocusto()"
 									/>
 								</td>
 							</tr>
@@ -247,8 +249,9 @@
 										class="sizetext"
 										type="number"
 										name=""
-										id=""
+										id="custo3"
 										placeholder="R$ 0,00"
+										onChange="resumocusto()"
 									/>
 								</td>
 							</tr>
@@ -259,8 +262,9 @@
 										class="sizetext"
 										type="number"
 										name=""
-										id=""
+										id="custo4"
 										placeholder="R$ 0,00"
+										onChange="resumocusto()"
 									/>
 								</td>
 							</tr>
@@ -287,7 +291,7 @@
 								</tr>
 								<tr>
 									<td colspan="2" class="investimento">Custos Diversos</td>
-									<td>R$ 0,00</td>
+									<td id="resumocusto">R$ 0,00</td>
 								</tr>
 								<tr>
 									<td class="investimento">Margem de negociação</td>
