--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
 								</tr>
 								<tr>
 									<td colspan="2" class="investimento">Custos Diversos</td>
-									<td id="resumocusto">R$ 0,00</td>
+									<td id="resumocustos">R$ 0,00</td>
 								</tr>
 								<tr>
 									<td class="investimento">Margem de negociação</td>
@@ -303,7 +303,7 @@
 											onChange="resumomargen()"
 										/>
 									</td>
-									<td>R$ 0,00</td>
+									<td id="vlrMargem">R$ 0,00</td>
 								</tr>
 								<tr>
 									<td
@@ -312,7 +312,7 @@
 									>
 										Sugestão de cobrança.
 									</td>
-									<td>R$ 0,00</td>
+									<td id="sugestionVlr">R$ 0,00</td>
 								</tr>
 							</table>
 						</div>
